Fixed scrolling/spacing issues with button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -225,86 +225,73 @@
   padding: 15px;
 }
 
-.kontainer {
-  left: px;
-  top: 30px;
-  width: 300px;
-  padding: 35px;
-  border: 0px solid #fbfbfb;
-}
+  .kontainer {
+    position: fixed;
+    float: left;
+    width: 300px;
+    padding: 35px;
+    border: 0px solid #fbfbfb;
+  }
 
-.kontainer:before {
-  background: #fbfbfb;
-  height: 20px;
-  width: 80px;
-  position: absolute;
-  z-index: 200;
-  margin: 20px 0 0 110px;
-}
+  .a, .b, .c, .d, .e, .f {
+    position: static;
+    background: #fbdb0c;
+    height: 13px;
+    width: 84px;
+    box-shadow: -3px 4px 0px 0px rgba(0,0,0,0.1);
 
-.kontainer:after {
-  margin: -80px 0 0 140px;
-}
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
 
-.a, .b, .c, .d, .e, .f {
-  position: relative;
-  background: #fbdb0c;
-  height: 13px;
-  width: 84px;
-  box-shadow: -3px 4px 0px 0px rgba(0,0,0,0.1);
+  .a {
+    border-radius: 15px 0 0 0;
+  }
 
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
+  .b{
+    background: #fce133;
+    width: 66px;
+  }
 
-.a {
-  border-radius: 15px 0 0 0;
-}
+  .c {
+    background: #fce659;
+    width: 76px;
+  }
 
-.b{
-  background: #fce133;
-  width: 66px;
-}
+  .d {
+    background: #fdec80;
+    width: 60px;
+  }
 
-.c {
-  background: #fce659;
-  width: 76px;
-}
+  .e {
+    background: #fef2a6;
+    width: 90px;
+  }
 
-.d {
-  background: #fdec80;
-  width: 60px;
-}
+  .f {
+    background: #fef8cd;
+    width: 80px;
+    border-radius: 0 0 0 15px;
+  }
 
-.e {
-  background: #fef2a6;
-  width: 90px;
-}
+  .kontainer:hover > .a,
+  .kontainer:hover > .b,
+  .kontainer:hover > .c,
+  .kontainer:hover > .d,
+  .kontainer:hover > .e,
+  .kontainer:hover > .f{
+    width: 165px;
+  }
 
-.f {
-  background: #fef8cd;
-  width: 80px;
-  border-radius: 0 0 0 15px;
-}
+  .kontainer:hover > .a{
+    border-radius: 15px 15px 0 0;
+  }
 
-.kontainer:hover > .a,
-.kontainer:hover > .b,
-.kontainer:hover > .c,
-.kontainer:hover > .d,
-.kontainer:hover > .e,
-.kontainer:hover > .f{
-  width: 175px;
-}
-
-.kontainer:hover > .a{
-  border-radius: 15px 15px 0 0;
-}
-
-.kontainer:hover > .f{
-  border-radius: 0 0 15px 15px;
-}
+  .kontainer:hover > .f{
+    border-radius: 0 0 15px 15px;
+  }
 
 .display {
 	visibility: visible;
